--- a/Projeto Site HTML/Projeto Site HTML/Gatinhos/I.N.html
+++ b/Projeto Site HTML/Projeto Site HTML/Gatinhos/I.N.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="icon" type="image/png" href="../Imagens/icon_cat.jpg.jpg">
     <title>Gatinho I.N.</title>
 </head>
 <body>
         <header>
-            <h1>Adote um Miau!</h1>
+            <h1><img src="../Imagens/icon_cat.jpg.jpg" class="icon_titulo">Adote um Miau!</h1>
             <p>Adote um gatinho que precisa de um lar!</p>
         </header>
         <main class="principal">
