--- a/Projeto Site HTML/Projeto Site HTML/index.html
+++ b/Projeto Site HTML/Projeto Site HTML/index.html
@@ -5,10 +5,11 @@
         <title>Adote um Miau</title>
         <meta name="description" content="Um site para adoção de gatos">
         <link rel="stylesheet" href="CSS/style.css">
+        <link rel="icon" type="image/png" href="../Projeto Site HTML/Imagens/icon_cat.jpg.jpg">
     </head>
     <body>
         <header>
-            <h1>Adote um Miau!</h1>
+            <h1><img src="../Projeto Site HTML/Imagens/icon_cat.jpg.jpg" class="icon_titulo">Adote um Miau!</h1>
             <p>Adote um gatinho que precisa de um lar!</p>
         </header>
         <main>
